[gd_scene load_steps=9 format=3 uid="uid://cfsei3airwx4s"]

[ext_resource type="Theme" uid="uid://bcibt73qths3g" path="res://addons/tube/inspector/theme.tres" id="1_5a58g"]
[ext_resource type="Script" uid="uid://pbxxonhemirk" path="res://addons/tube/inspector/message_item_control.gd" id="1_eynp4"]
[ext_resource type="Texture2D" uid="uid://bw1nalj6ph1ul" path="res://addons/tube/inspector/icons/info_icon.tres" id="2_83orp"]
[ext_resource type="Texture2D" uid="uid://wcdvmyl01v1p" path="res://addons/tube/inspector/icons/error_icon.tres" id="3_hv8fo"]
[ext_resource type="Texture2D" uid="uid://c141mpg6pwbt8" path="res://addons/tube/inspector/icons/sent_icon.tres" id="4_815v1"]
[ext_resource type="Texture2D" uid="uid://cxdxdrs7t6fbp" path="res://addons/tube/inspector/icons/warning_icon.tres" id="4_hv8fo"]
[ext_resource type="Texture2D" uid="uid://d3r4nf1lyap1q" path="res://addons/tube/inspector/icons/received_icon.tres" id="5_5a58g"]
[ext_resource type="Texture2D" uid="uid://vj4v31qi6u4d" path="res://addons/tube/inspector/icons/success_icon.tres" id="7_815v1"]

[node name="MessageItemControl" type="MarginContainer"]
custom_minimum_size = Vector2(0, 32)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_5a58g")
script = ExtResource("1_eynp4")
icons = Dictionary[int, Texture]({
0: ExtResource("2_83orp"),
1: ExtResource("3_hv8fo"),
2: ExtResource("4_hv8fo"),
3: ExtResource("4_815v1"),
4: ExtResource("5_5a58g"),
5: ExtResource("7_815v1")
})

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ButtonFlat"
toggle_mode = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TypeTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
texture = ExtResource("4_815v1")
expand_mode = 1
stretch_mode = 5

[node name="TimeLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HeaderSmall"
text = "00:00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FromLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "00"

[node name="DataLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_type_variation = &"HeaderSmall"
text = "DATA"
vertical_alignment = 1
text_overrun_behavior = 1

[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
